# matrix

./: .travis.yml  CMakeLists.txt
sources/: matrix.cpp  matrix.hpp  matrix_impl.hpp
tests/: matrix_gtest.cpp
